New command and fixes